Adding class for navigating pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,4 @@
-#set( $symbol_pound = '#' )
-#set( $symbol_dollar = '$' )
-#set( $symbol_escape = '\' )
-
-site.url=http://google.com
+site.url=https://github.com
 
 browser.name=chrome
 browser.version=50
-
-user.username = testusername
-user.password = testpassword
